fix problems with nav on safari

--- a/src/sass/utilities/_components.scss
+++ b/src/sass/utilities/_components.scss
@@ -101,7 +101,7 @@
 
 .waves {
 	position: relative;
-	margin-top: 1.1em;
+	margin-top: 1.3em;
 	transition: transform 0.4s;
 	z-index: -1;
 }
